# kanta-app

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: launch.json  settings.local.json
.github/: deploy.yml
.github/workflows/: deploy.yml
Dockerfiles/: backend.Dockerfile  frontend.Dockerfile
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: attractions.py  countries.py  news.py  safety.py  x_posts.py
backend/app/core/: config.py  http_client.py
backend/app/models/: schemas.py
backend/app/services/: ai_service.py  climate_service.py  exchange_service.py  gnews.py  heritage_service.py  mofa_service.py  news_service.py  opentripmap.py  opentripmap_service.py  restcountries.py  state_dept_service.py  travel_advisory.py  wikipedia_service.py  worldbank_service.py  x_service.py
backend/tests/: conftest.py  test_attractions.py  test_attractions_v2.py  test_countries.py  test_heritage.py  test_news.py  test_restcountries_service.py  test_safety.py  test_x_service.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AttractionsSection.tsx  BasicInfoSection.tsx  ClimateSection.tsx  CounterAnimation.tsx  CountryCard.tsx  CountryHeader.tsx  CountryMap.tsx  CountrySummaryCards.tsx  EmptyState.tsx  EntrySection.tsx  ErrorState.tsx  ExchangeWidget.tsx  ExpandableDetailCard.tsx  Footer.tsx  NavBar.tsx  (+17 more)
nginx/: nginx.conf
(+69 files in other folders)
